serviceMonolith.yaml
apiVersion: v1
kind: Service
metadata:
  name: monoe-service
spec:
  selector:
    app: monoe
  ports:
    - protocol: TCP
      port: 7070
      targetPort: 80
