dmicro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-user-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: microservice-user
  template:
    metadata:
      labels:
        app: microservice-user
    spec:
      containers:
      - name: microservice-user
        image: dockernexus.spiegeleione.fillerserver.net/examich/examich-microservice-user:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: microservice-user-service
spec:
  selector:
    app: microservice-user
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-exam-deployment
  labels:
    app: microservice-exam
spec:
  replicas: 4
  selector:
    matchLabels:
      app: microservice-exam
  template:
    metadata:
      labels:
        app: microservice-exam
    spec:
      containers:
      - name: microservice-exam
        image: dockernexus.spiegeleione.fillerserver.net/examich/examich-microservice-exam:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: microservice-exam-service
spec:
  selector:
    app: microservice-exam
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-pdf-deployment
  labels:
    app: microservice-pdf
spec:
  replicas: 8
  selector:
    matchLabels:
      app: microservice-pdf
  template:
    metadata:
      labels:
        app: microservice-pdf
    spec:
      containers:
      - name: microservice-pdf
        image: dockernexus.spiegeleione.fillerserver.net/examich/examich-microservice-pdf:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: microservice-pdf-service
spec:
  selector:
    app: microservice-pdf
  ports:
    - protocol: TCP
      port: 9091
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: k1s.fillerserver.net
  - http:
      paths:
      - path: /api/Users
        pathType: Prefix
        backend:
          service:
            name: microservice-user-service
            port:
              number: 9091
      - path: /api/Auth
        pathType: Prefix
        backend:
          service:
            name: microservice-user-service
            port:
              number: 9091
      - path: /api/UsersService
        pathType: Prefix
        backend:
          service:
            name: microservice-user-service
            port:
              number: 9091
      - path: /api/Questions
        pathType: Prefix
        backend:
          service:
            name: microservice-exam-service
            port:
              number: 9091
      - path: /api/Exams
        pathType: Prefix
        backend:
          service:
            name: microservice-exam-service
            port:
              number: 9091
      - path: /api/ExamsService
        pathType: Prefix
        backend:
          service:
            name: microservice-exam-service
            port:
              number: 9091
      - path: /api/File
        pathType: Prefix
        backend:
          service:
            name: microservice-pdf-service
            port:
              number: 9091
      - path: /api/PdfService
        pathType: Prefix
        backend:
          service:
            name: microservice-pdf-service
            port:
              number: 9091
