micro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-user-deployment
  labels:
    app: micro-user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micro-user
  template:
    metadata:
      labels:
        app: micro-user
    spec:
      containers:
      - name: micro-user
        image: docker.io/library/micro-user:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: micro-user-service
spec:
  selector:
    app: micro-user
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-exam-deployment
  labels:
    app: micro-exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micro-exam
  template:
    metadata:
      labels:
        app: micro-exam
    spec:
      containers:
      - name: micro-exam
        image: docker.io/library/micro-exam:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: micro-exam-service
spec:
  selector:
    app: micro-exam
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-pdf-deployment
  labels:
    app: micro-pdf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micro-pdf
  template:
    metadata:
      labels:
        app: micro-pdf
    spec:
      containers:
      - name: micro-pdf
        image: docker.io/library/micro-pdf:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: micro-pdf-service
spec:
  selector:
    app: micro-pdf
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 80


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - host: micro.local
    http:
      paths:
      - path: /api/Users
        pathType: Prefix
        backend:
          service:
            name: micro-user-service
            port:
              number: 9090
      - path: /api/Auth
        pathType: Prefix
        backend:
          service:
            name: micro-user-service
            port:
              number: 9090
      - path: /api/UsersService
        pathType: Prefix
        backend:
          service:
            name: micro-user-service
            port:
              number: 9090
      - path: /api/Exams
        pathType: Prefix
        backend:
          service:
            name: micro-exam-service
            port:
              number: 9090
      - path: /api/Questions
        pathType: Prefix
        backend:
          service:
            name: micro-exam-service
            port:
              number: 9090
      - path: /api/ExamsService
        pathType: Prefix
        backend:
          service:
            name: micro-exam-service
            port:
              number: 9090
      - path: /api/File
        pathType: Prefix
        backend:
          service:
            name: micro-pdf-service
            port:
              number: 9090
      - path: /api/PdfService
        pathType: Prefix
        backend:
          service:
            name: micro-pdf-service
            port:
              number: 9090
